test: cleanup RP cases